app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

header {
  background-color: white;
  display: flex;
  width: 100%;
  padding: 10px;
  box-sizing: border-box;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
  min-height: 63px;
}

.header-photo {
  position: relative;
  height: 40px;
  width: 40px;
  background-size: cover;
  border-radius: 200px;
}

html {
    position: relative;
    min-height: 100%;
}
body {
}

.footer {
  width: 100%;
  height: 150px;
  background: #3167b1;
  position: absolute;
  bottom: 0px; left: 0;
  background-color: white;
  display: flex;
  width: 100%;
  padding: 10px;
  box-sizing: border-box;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  border-top: 1px solid rgba(0, 0, 0, 0.15);
  min-height: 50px;
  max-height: 75px;
}

.github {
  height: 34px;
  width: 34px;
  padding: 24px;
  background-image: image-url('Github.png');
  background-size: 34px 34px;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  padding-right: 125px;
}

.linkedin {
  height: 34px;
  width: 34px;
  padding: 24px;
  background-image: image-url('Linkedin.png');
  background-size: 34px 34px;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  padding-left: 125px;
}

::placeholder {
  color: #8c8c8c;
  font-family: sans-serif;
  font-weight: lighter;
}

#map {
  width: 100%;
  height: 100%;
  border: 2px solid black;
}

.dropdown {
    display: inline-block;
}

.dropdown__content {
    display: none;
    position: absolute;
}

.dropdown--active .dropdown__content {
    display: block;
}

